force-app/main/default/objects/Woodshop_Project_Resources__c/Woodshop_Project_Resources__c.object-meta.xml
<CustomObject>
    <description>Created By: HNS
Business Unit: Salesforce Oakland Apprenticeship 2021
Purpose:  Will be the detail in a M-D relationship to Project and will have all the resources for the Woodshop Project</description>
    <label>Woodshop Project Resources</label>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>Woodshop ProjectRe Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Woodshop Project Resources</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>