force-app/main/default/objects/Woodshop_Project_Resources__c/fields/Woodshop_Project_Order__c.field-meta.xml
<CustomField>
    <fullName>Woodshop_Project_Order__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Created By: HNS
Business Unit: Salesforce Oakland Apprenticeship
Purpose:  IF applicable, will show any outside orders that we bought for the woodshop project</description>
    <label>Woodshop Project Order</label>
    <referenceTo>Woodshop_Project_Order__c</referenceTo>
    <relationshipLabel>Woodshop Project Resources</relationshipLabel>
    <relationshipName>Woodshop_Project_Resources</relationshipName>
    <type>Lookup</type>
</CustomField>