force-app/main/default/objects/Woodshop_Project_Resources__c/fields/Woodshop_Project_Order_Cost__c.field-meta.xml
<CustomField>
    <fullName>Woodshop_Project_Order_Cost__c</fullName>
    <description>Created By: HNS
Business Unit: Salesforce Oakland Apprenticeship
Purpose:  Will give the cost of project resources if applicable</description>
    <formula>Woodshop_Project_Order__r.Woodshop_Project_Order_Cost__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Woodshop Project Order Cost</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>