force-app/main/default/objects/Woodshop_Project_Resources__c/fields/Woodshop_Project_Supplies__c.field-meta.xml
<CustomField>
    <fullName>Woodshop_Project_Supplies__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Created By:HNS
Business Unit: Salesforce Oakland Apprenticeship 2021
Purpose:  Will show which supplies are part of project resources</description>
    <label>Woodshop Project Supplies</label>
    <referenceTo>Woodshop_Project_Supplies__c</referenceTo>
    <relationshipLabel>Woodshop Project Resources</relationshipLabel>
    <relationshipName>Woodshop_Project_Resources</relationshipName>
    <type>Lookup</type>
</CustomField>