force-app/main/default/objects/Woodshop_Project_Resources__c/fields/Woodshop_Project_Supply_Cost__c.field-meta.xml
<CustomField>
    <fullName>Woodshop_Project_Supply_Cost__c</fullName>
    <description>Created By: HNS
Business Unit: Salesforce Oakland Apprenticeship 2021
Purpose:  Will give the cost for the supply</description>
    <formula>Woodshop_Project_Supplies__r.Supply_Cost__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Woodshop Project Supply Cost</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>