force-app/main/default/objects/Woodshop_Project_Resources__c/fields/Woodshop_Project_Tools__c.field-meta.xml
<CustomField>
    <fullName>Woodshop_Project_Tools__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Created By: HNS
Business Unit: Salesforce Oakland Apprenticeship
Purpose:  Will allow tools to be selected for project resources</description>
    <label>Woodshop Project Tools</label>
    <referenceTo>Woodshop_Project_Tools__c</referenceTo>
    <relationshipLabel>Woodshop Project Resources</relationshipLabel>
    <relationshipName>Woodshop_Project_Resources</relationshipName>
    <type>Lookup</type>
</CustomField>