force-app/main/default/objects/Woodshop_Project_Resources__c/fields/Woodshop_Project_Tools_Cost__c.field-meta.xml
<CustomField>
    <fullName>Woodshop_Project_Tools_Cost__c</fullName>
    <description>Created By: HNS
Business Unit:  Salesforce Oakland Apprenticeship 2021
Purpose: This will create a tool cost for tools that are selected as a project resource</description>
    <formula>Woodshop_Project_Tools__r.Tool_Cost__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Woodshop Project Tools Cost</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>