force-app/main/default/objects/Woodshop_Project_Resources__c/fields/Woodshop_Projects__c.field-meta.xml
<CustomField>
    <fullName>Woodshop_Projects__c</fullName>
    <description>Created By: HNS
Business Unit: Salesforce Oakland Apprenticeship 2021
Purpose:  Will allow a user to tie project resources to a particular project</description>
    <label>Woodshop Projects</label>
    <referenceTo>Woodshop_Projects__c</referenceTo>
    <relationshipLabel>Woodshop Project Resources</relationshipLabel>
    <relationshipName>Woodshop_Project_Resources</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>